# Agentic-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  agenticrag.ipynb  deployment.yaml  main.py  pyproject.toml  requirements.txt  service.yaml
documents/: SLIDE 1.docx  new_pad.txt
